unpackaged/main/default/objects/ffirule__IntegrationRuleLog__c/fields/ffirule__ApexJobID__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ApexJobID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Apex Job ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>