unpackaged/main/default/objects/ffirule__IntegrationRuleLog__c/fields/ffirule__Errors__c.field-meta.xml
<CustomField>
    <fullName>ffirule__Errors__c</fullName>
    <label>Errors</label>
    <summaryFilterItems>
        <field>ffirule__IntegrationRuleLogLineItem__c.ffirule__Severity__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>ffirule__IntegrationRuleLogLineItem__c.ffirule__IntegrationRuleLog__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>