unpackaged/main/default/objects/ffirule__IntegrationRuleLog__c/fields/ffirule__IntegrationRule__c.field-meta.xml
<CustomField>
    <fullName>ffirule__IntegrationRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClickLink Rule</label>
    <referenceTo>ffirule__IntegrationRule__c</referenceTo>
    <relationshipLabel>ClickLink Logs</relationshipLabel>
    <relationshipName>IntegrationRuleLogs</relationshipName>
    <type>Lookup</type>
</CustomField>