unpackaged/main/default/objects/ffirule__IntegrationRuleLog__c/fields/ffirule__IntegrationRuleJobNoneScheduled__c.field-meta.xml
<CustomField>
    <fullName>ffirule__IntegrationRuleJobNoneScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Now Job</label>
    <type>Checkbox</type>
</CustomField>