unpackaged/main/default/objects/ffirule__IntegrationRuleLog__c/fields/ffirule__Lines__c.field-meta.xml
<CustomField>
    <fullName>ffirule__Lines__c</fullName>
    <label>Lines</label>
    <summaryForeignKey>ffirule__IntegrationRuleLogLineItem__c.ffirule__IntegrationRuleLog__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>