unpackaged/main/default/objects/ffirule__IntegrationRuleLog__c/listViews/ffirule__All.listView-meta.xml
<ListView>
    <fullName>ffirule__All</fullName>
    <columns>NAME</columns>
    <columns>ffirule__IntegrationRule__c</columns>
    <columns>ffirule__IntegrationRuleButton__c</columns>
    <columns>ffirule__IntegrationRuleJob__c</columns>
    <columns>ffirule__Summary__c</columns>
    <columns>ffirule__Errors__c</columns>
    <columns>ffirule__Lines__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>